# pyForth

./: .readthedocs.yaml  Exceptions.py  Forth.py  PyForth.pyproj  README.md  Readme.md  Runtime.py  Untitled.ipynb  fibIter.forth  mkdocs.yml  primitives.py  pyproject.toml  rio.toml  sample.fth  testInterpreter.py  voc.json
doc/: Makefile  conf.py  index.rst  make.bat  primitive.rst  runtime.rst  words.rst
docs/: architecture.md  callFrames.md  controlStructures.md  index.md  words.md
samples/: divide.forth
src/pyforth/: __init__.py  exceptions.py  forth.py  primitives.py  runtime.py  words.py
src/ui/: README.md  __init__.py
src/ui/components/: __init__.py  command_processor.py  memory_display.py  stack_display.py
src/ui/pages/: __init__.py  main_page.py
tests/: test_primitives.py  test_smoke.py
